Update dungeon/src/core/systems/SoundSystem.java
Co-authored-by: viddie <viddie@hotmail.de>